--- a/ad_mock_lib/build.gradle
+++ b/ad_mock_lib/build.gradle
@@ -43,8 +43,7 @@ afterEvaluate {
     publishing {
         publications {
             release(MavenPublication) {
-                from components.release
-
+                from components.findByName("default")
                 groupId = 'com.github.RonOhayon' // 🔥 Replace with your GitHub username
                 artifactId = 'ad_mock_lib' // 🔥 Change to your library name
                 version = '1.0.0' // 🔥 Use your desired version
