--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
+    implementation project(path: ':ad_mock_lib')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
-    implementation project(':ad_mock_lib')
+    //implementation project(':ad_mock_lib')
+    implementation 'com.github.RonOhayon:Ad_Mock_Lib:v1.0.4'
 }
