--- a/ad_mock_lib/build.gradle
+++ b/ad_mock_lib/build.gradle
@@ -25,6 +25,12 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    publishing {
+        singleVariant("release") {
+            withSourcesJar()
+            withJavadocJar()
+        }
+    }
 }
 
 dependencies {
@@ -39,14 +45,15 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.15.1'
 }
 
-afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
-                from components.findByName("release")
-                groupId = 'com.github.RonOhayon' // 🔥 Replace with your GitHub username
-                artifactId = 'ad_mock_lib' // 🔥 Change to your library name
-                version = '1.0.0' // 🔥 Use your desired version
+publishing {
+    publications {
+        release(MavenPublication) {
+            groupId = 'com.github.RonOhayon'
+            artifactId = 'Ad_Mock_Lib'
+            version = '1.0.4'
+
+            afterEvaluate {
+                from components.release
             }
         }
     }
